# plonk

./: .gitignore  README.md
plonk/: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT
plonk/data/: proof.json  proving_key.json  srs.json  verification_key.json
plonk/src/: lib.rs
plonk/src/common/: bivariate_kzg.rs  bivariate_polynomials.rs  kzg.rs  mod.rs  pairing_utils.rs  polynomials.rs  proof.rs  protocols.rs  univariate_polynomials.rs  utils.rs
plonk/src/prover/: mod.rs  part1.rs  part2.rs  part3.rs  part4.rs  part5.rs
plonk/src/setup/: json.rs  mod.rs
plonk/src/setup_global_params/: json.rs  mod.rs
plonk/src/setup_proving_key/: json.rs  mod.rs
plonk/src/setup_verification_key/: json.rs  mod.rs
plonk/src/verifier/: mod.rs  part1.rs  part2.rs  part3.rs  part4.rs
plonk/tests/: bivariate_kzg_tests.rs  bivariate_polynomials_tests.rs  bls12_381_tests.rs  ec_tests.rs  kzg_tests.rs  polynomials_tests.rs  protocols_tests.rs  univariate_polynomials_tests.rs  utils_tests.rs
