[package]
name = "plonk"
version = "0.1.0"
authors = ["Hamza Jeljeli <hamzajeljeli@live.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-std = "0.5.0"
ark-poly = "0.5.0"
ark-ec = "0.5.0"
rayon = "1.10.0"
thiserror = "1.0"
num-bigint = "0.4.6"