[package]
name = "plonk"
version = "0.1.0"
authors = ["Hamza Jeljeli <hamzajeljeli@live.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arkworks v0.4 with serde support
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-std = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }

# Utilities
rayon = "1.10"
thiserror = "1.0"
num-bigint = "0.4"
hex = "0.4.3"
